SLING-10730 Improve configurations of integration tests
* Use factoryConfiguration from Pax Exam instead of ConfigurationAdmin
* Drop useless cleanup
* Use slingEvent option
* Use injected JobManager
* Extract base configuration into new JobsTestSupport