@@ -95,6 +95,7 @@
             </plugin>
             <!-- integration tests run with pax-exam -->
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <executions>
                     <execution>
@@ -105,23 +106,10 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <systemProperties>
-                        <property>
-                            <name>bundle.filename</name>
-                            <value>${basedir}/target/${project.build.finalName}.jar</value>
-                        </property>
-                        <property>
-                            <name>org.ops4j.pax.url.mvn.useFallbackRepositories</name>
-                            <value>false</value>
-                        </property>
-                        <property>
-                            <name>org.ops4j.pax.url.mvn.repositories</name>
-                            <value>https://repo1.maven.org/maven2@id=central</value>
-                        </property>
-                    </systemProperties>
-                    <argLine>
-                        -Xmx2048m -XX:MaxPermSize=512m
-                    </argLine>
+                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                    <systemPropertyVariables combine.children="append">
+                        <bundle.filename>${basedir}/target/${project.build.finalName}.jar</bundle.filename>
+                    </systemPropertyVariables>
                     <includes>
                         <include>**/it/*</include>
                     </includes>
@@ -277,6 +265,12 @@
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.testing.tools</artifactId>
             <version>1.0.14</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.sling</groupId>
+            <artifactId>org.apache.sling.commons.json</artifactId>
+            <version>2.0.20</version>
             <scope>test</scope>
         </dependency>
         <dependency>
